demos/podpvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamic-app
  labels:
    app: dynamic-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamic-app
  template:
    metadata:
      labels:
        app: dynamic-app
    spec:
      containers:
      - name: dynamic-app
        image: centos:7
        command: ["/bin/sh"]
        args: ["-c", "while true; do echo $(date -u) >> /data/out.txt; sleep 5; done"]
        volumeMounts:
        - name: persistent-storage
          mountPath: /data
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: azurefile
