demos/webapp-color.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: webapp-color
  name: webapp-color
spec:
  replicas: 2
  selector:
    matchLabels:
      run: webapp-color
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
       labels:
         run: webapp-color
    spec:
      containers:
      - env:
        - name: APP_COLOR
          #value: green
          valueFrom:
             configMapKeyRef: 
               name: webapp-color
               key: APP_COLOR
        image: acraccess.azurecr.io/webapp-color
        name: webapp-color
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 2    
        readinessProbe:
          httpGet:
            path: /
            port: 8080 
          initialDelaySeconds: 2
          periodSeconds: 2    
        resources:    
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "100m"
