demos/webapp-color-bluegreen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: webapp-color-bluegreen
  name: webapp-color-bluegreen
spec:
  replicas: 2
  selector:
    matchLabels:
      run: webapp-color-bluegreen
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
       labels:
         run: webapp-color-bluegreen
    spec:
      containers:
      - env:
        - name: APP_COLOR
          value: green
        image: acraccess.azurecr.io/webapp-color
        name: webapp-color
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080 
        resources:    
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "64Mi"
            cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: webapp-color-bluegreen
  name: webapp-color-bluegreen-svc
spec:
  #externalTrafficPolicy: Cluster
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: webapp-color-bluegreen
  sessionAffinity: None
  type: ClusterIP
