demos/webapp-color-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: webapp-color
  name: webapp-color-svc
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: webapp-color
  sessionAffinity: None
  type: LoadBalancer
