demos/webapp-color-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webcolor-web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: frontend.52.177.149.91.nip.io 
    http:
      paths:
      - backend:
          serviceName: webapp-color-svc
          servicePort: 8080
        path: /
  # - host: frontendblue.52.177.149.91.nip.io 
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: webapp-color-bluegreen-svc
  #         servicePort: 8080
  #       path: /
